--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -8,7 +8,6 @@ jobs:
   build:
     name: Build image
     runs-on: ubuntu-latest
-    needs: trigger-workflow
 
     steps:
 
@@ -23,14 +22,22 @@ jobs:
         repository: ${{ secrets.DOCKER_USERNAME }}/first-attempt-backend
         tags: ${{ github.sha }}, latest
    
+ 
   trigger-workflow:
     name: Trigger workflow
     runs-on: ubuntu-latest
+    needs: build
     steps:
+      - name: Wait for 10 seconds
+        uses: jakejarvis/wait-action@master
+        with: 
+          time: '10s'
+
       - name: Trigger infrastructure repo workflow
         uses: benc-uk/workflow-dispatch@v1
         with:
           workflow: Update-infrastructure
           ref: master
+          inputs: '{ "github_sha" : $GITHUB_SHA }'
           repo: mattedamo/thesis-microservices-app-backend-first-attempt-infrastructure
           token: ${{ secrets.WORKFLOW_DISPATCH }}
