--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -28,16 +28,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Wait for 10 seconds
-        uses: jakejarvis/wait-action@master
-        with: 
-          time: '10s'
-
       - name: Trigger infrastructure repo workflow
         uses: benc-uk/workflow-dispatch@v1
         with:
           workflow: Update-infrastructure
           ref: master
-          inputs: '{ "github_sha" : ${{github.sha}} }'
+          inputs: '{ "github_sha" : "'"${{github.sha}}"'" }'
           repo: mattedamo/thesis-microservices-app-backend-first-attempt-infrastructure
           token: ${{ secrets.WORKFLOW_DISPATCH }}
