--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -33,6 +33,7 @@ jobs:
         with:
           workflow: Update-infrastructure
           ref: master
-          inputs: '{ "github_sha" : "${{github.sha}}" }'
+#          inputs: '{ "github_sha" : "${{github.sha}}" }'
+          inputs: '{ "carete" : "carebben" }
           repo: mattedamo/thesis-microservices-app-backend-first-attempt-infrastructure
           token: ${{ secrets.WORKFLOW_DISPATCH }}
