--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,6 +13,20 @@ jobs:
 
     - name: checkout
       uses: actions/checkout@v2
+
+    - name: Check existence file input
+      id: check_file
+      uses: andstor/file-existence-action@v1
+      with:
+        files: "file.yaml"
+    - name: File not exists
+      if: steps.check_file.outputs.files_exists == 'false'
+      run: |
+        echo "failed"
+        exit 1
+    - name: File exists
+      if: steps.check_file.outputs.files_exists == 'true'
+      run: echo "exists!"
  
     - name: Build and push Docker image
       uses: docker/build-push-action@v1.1.0
@@ -21,3 +35,17 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
         repository: ${{ secrets.DOCKER_USERNAME }}/first-attempt-backend
         tags: ${{ github.sha }}, latest
+
+  trigger-workflow:
+    name: Trigger workflow
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Trigger infrastructure repo workflow
+        uses: benc-uk/workflow-dispatch@v1
+        with:
+          workflow: Update-infrastructure-backend
+          ref: master
+          inputs: '{"sha-tag" : "${{ github.sha }}"}'
+          repo: mattedamo/thesis-microservices-app-backend-first-attempt-infrastructure
+          token: ${{ secrets.WORKFLOW_DISPATCH }}
