--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,6 +13,20 @@ jobs:
 
     - name: checkout
       uses: actions/checkout@v2
+    
+    - name: Check existence file input
+      id: check_file
+      uses: andstor/file-existence-action@v1
+      with:
+        files: "file.yaml"
+    - name: File not exists
+      if: steps.check_file.outputs.files_exists == 'false'
+      run: |
+        echo "failed"
+        exit 1
+    - name: File exists
+      if: steps.check_file.outputs.files_exists == 'true'
+      run: echo "exists!"
  
     - name: Build and push Docker image
       uses: docker/build-push-action@v1.1.0
