--- a/.github/workflows/workflow-tmp.yml
+++ b/.github/workflows/workflow-tmp.yml
@@ -2,8 +2,7 @@ name: WorkFlow-production
 
 on:
   push:
-    branches: 
-      - 'setting-up'
+    branches: [master, setting-up]
 
 jobs:
   setup:
